SG-2004-10-29-1: Bugfix:    second try on the profiling.
                 Review:    JG
                 Changed:   scheduler

SG-2004-10-29-0: Bugfix:    fixed the flush implementation in the event master
                 Review:    JG
                 Changed:   qmaster

CR-2004-10-28-1: Testsuite: commlib throughput test now uses binary_starter.sh
                            to startup more virtual_event/gdi_client binaries 
                            parallel

JG-2004-10-28-0: Bugfix:    qmake did not export shell env vars.
                 Bugtraq:   6090162
                 Review:    SG
                 Testsuite: New check system_tests/clients/qmake.
                            Check performance/throughput: Better diagnosis of 
                            event delivery interval.
                            Check functional/tight_integration fixed for 5.3.

CR-2004-10-28-0: Enhancem.: - code cleanup of commlib
                            - continue work on SSL framework module
                            - removed unused logging output
                 Changed:   commlib
                 Review:    AA

SG-2004-10-28-0: Bugfix:    - fixed profiling for the scheduler
                            - fixed the inclusiv/exclusiv profiling of different
                              layers
                 Changed:   scheduler, profiling
                 Review:    pending

AA-2004-10-27-1: Bugfix:    qmon returns an error dialog, when editing a 
                            calendar
                 Issue:     1267
                 Bugtraq:   6185169
                 Changed:   qmon
                 Review:    CR

AA-2004-10-27-0: Bugfix:    qmon job customize weird @{} field names
                            additional fields canot be added
                 Issue:     1307
                 Bugtraq:   6185136
                 Changed:   qmon
                 Review:    CR
                 
SG-2004-10-27-0: Bugfix:    qmod can modify queues starting with digits